# ECE421

./: .gitmodules
assignments/assignment1/: 10a.hs  10b.rs  2.hs  7  7.rs  8.rs  report.tex
assignments/assignment2/: .gitignore  1  1.rs  2  2.rs  3  3.rs  4  4.rs  5  5.rs  6.tex  7.tex  8.tex  9.tex  bag  report.tex  submission.sh
assignments/assignment3/: Makefile
assignments/assignment3/UTApp/: Cargo.toml
assignments/assignment3/UTApp/src/: calculator.rs  main.rs  question1.rs  question2.rs  question3.rs  question4.rs
assignments/assignment3/UTApp_harmcrest/: Cargo.toml
assignments/assignment3/UTApp_harmcrest/src/: calculator.rs  main.rs  question1.rs  question2.rs  question3.rs  question4.rs
assignments/assignment3/question2/: Cargo.toml
assignments/assignment3/question2/src/: main.rs
assignments/assignment3/questions_4_5/: Cargo.toml
assignments/assignment3/questions_4_5/src/: combination.rs  main.rs  tax.rs
assignments/assignment4/: Makefile
assignments/assignment4/linked_list/: Cargo.toml
assignments/assignment4/linked_list/src/: main.rs
assignments/assignment4/linked_list_question2.rar/: Cargo.toml
assignments/assignment4/linked_list_question2.rar/src/: main.rs
assignments/assignment4/skiplist_question_3/: Cargo.toml
assignments/assignment4/skiplist_question_3/src/: main.rs
assignments/assignment4/skiplist_question_4/: Cargo.toml
assignments/assignment4/skiplist_question_4/src/: linkedlist.rs  main.rs  skiplist.rs
assignments/assignment5/: q2_practice.py
assignments/assignment5/refactoring/: Cargo.toml
assignments/assignment5/refactoring/src/: main.rs  question_1.rs  question_2.rs  question_3.rs
assignments/assignment6/Assignment6Question1/: Cargo.toml
assignments/assignment6/Assignment6Question1/data/: users.db
assignments/assignment6/Assignment6Question1/src/: main.rs  userbase.rs
assignments/assignment6/Assignment6Question2/: Cargo.toml
assignments/assignment6/Assignment6Question2/data/: users.db
assignments/assignment6/Assignment6Question2/src/: cli.yml  main.rs  userbase.rs
assignments/assignment6/Assignment6Question3/: Cargo.toml
assignments/assignment6/Assignment6Question3/data/: users.db
assignments/assignment6/Assignment6Question3/src/: main.rs  userbase.rs
assignments/assignment6/DBProject/data/: users.db
assignments/assignment6/DBProject/src/: main.rs
assignments/assignment7/Assignment7_Q2/: Cargo.toml
assignments/assignment7/Assignment7_Q2/src/: main.rs
assignments/assignment7/Assignment7_Q3/: Cargo.toml
assignments/assignment7/Assignment7_Q4/: Cargo.toml
assignments/assignment7/Bank_Application/: Cargo.toml
assignments/assignment7/assignment7/: Cargo.toml
assignments/assignment8/: 2.rs  4  4.rs  report.tex
labs/lab1/: eclass_submission.md
labs/lab1/deliverable3/: deliverable_4.md  part4.rs
labs/lab1/eclass_submission/: Cargo.toml
labs/lab1/hello_world/: Cargo.toml
labs/lab3/lab3/: Cargo.toml
labs/lab5/: question1.md
labs/lab5/DBProject/: README.md
labs/lab5/ssort/: Cargo.toml
labs/lab5/ssort/benches/: my_benchmark.rs
labs/lab5/ssort/src/: main.rs  optimized.rs  unoptimized.rs
labs/lab7/lab7/: Cargo.toml
labs/lab7/lab7/benches/: my_benchmark.rs
labs/lab7/lab7/src/: chebyshev_distance.rs  euclidean_distance.rs  julia.rs  julia_rayon.rs  main.rs  mandelbrot.rs  mandelbrot_rayon.rs  manhattan_distance.rs  part2.rs  part3.rs
labs/lab9/: question_1.wat
labs/lab9/wasm-is-prime/: Cargo.toml  LICENSE_MIT
notes/other/: links.md
(+22 files in other folders)
