[package]
name = "questions_4_5"
version = "0.1.0"
authors = ["Arunscape <8227297+Arunscape@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
num-iter = "0.1.40"
galvanic-assert = "0.8.7"
assert-impl = "0.1.3"
