[package]
name = "DBProject"
version = "0.1.0"
authors = ["Arunscape <8227297+Arunscape@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.6.1"
sqlite = "0.25.0"
chrono = "0.4.11"
