[package]
name = "Assignment6Question2"
version = "0.1.0"
authors = ["Arunscape <8227297+Arunscape@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "^3.0.0-beta.1", features = ["yaml"], git = "https://github.com/clap-rs/clap/"}
rpassword = "4.0.5"
bcrypt = "0.6.2"
sqlite = "0.25.0"
chrono = "0.4.11"
