[package]
name = "assignment_6_question3"
version = "0.0.1"
authors = ["Arunscape <8227297+Arunscape@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "^3.0.0-beta.1", features = ["yaml"], git = "https://github.com/clap-rs/clap/"}
rpassword = "4.0.5"
sqlite = "0.25.0"
chrono = "0.4.11"
rust-argon2 = "0.8.1"
