[package]
name = "ssort"
version = "0.1.0"
authors = ["Arunscape <8227297+Arunscape@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "my_benchmark"
harness = false
