[package]
name = "lab7"
version = "0.1.0"
authors = ["Arunscape <8227297+Arunscape@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.67"
rayon = "1.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
