[package]
name = "lab7"
version = "0.1.0"
authors = ["Arunscape <8227297+Arunscape@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.67"
rayon = "1.3.0"
error-chain = "0.12.2"
image = "0.23.12"
num = "0.2.1"
num_cpus = "1.12.0"
threadpool = "1.7.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
